# Maple

./: .gitattributes  .gitignore  .gitmodules  .repo_ignore  CLAUDE.md  NEW_UPDATE_TO_CONVERSATIONS_PLAN.md  README.md  TEAM_MANAGEMENT_REQUIREMENTS.md  UPDATE_TO_RESPONSES_API.md  flake.nix  justfile  setup-hooks.sh  zapstore.yaml
.agents/skills/release-maple/: SKILL.md
.agents/skills/testing-frontend/: SKILL.md
.githooks/: pre-commit
.github/workflows/: android-build.yml  android-pr-build.yml  browseruse-tests.yml  claude.yml  desktop-build.yml  desktop-pr-build.yml  frontend-tests.yml  mobile-build.yml  mobile-pr-build.yml  native-beta-android.yml  native-beta-desktop.yml  native-beta-ios.yml  native-beta-linux.yml  native-beta-macos.yml  release.yml  rust-tests.yml  testflight-on-comment.yml  web-build.yml  zapstore-publish.yml
docs/: agent-client-protocol-research.md  agent-mode-direct-goose-product-plan.md  agent-mode-mcp.md  android-platform-checks-analysis.md  conversations-api-implementation.md  domain-split-migration-plan.md  goose-embedded-readiness-feedback.md  goose-sdk-direct-experiment-prep.md  ios-tts-local-development.md  mobile-navigation-plan.md  pdf-ocr.md  product-redesign-spec.md  support-faq.md  tool-call-immediate-rendering.md  troubleshooting-ios-build.md  tts-research.md  unified-chat-refactor.md  windows-build.md  windows-certificate-setup.md  windows-progress.md  windows-research.md
docs/research/: browser-use.md
frontend/: .env.example  .env.local.template  .env.test  README-localization.md  TEAM_IMPLEMENTATION_SUMMARY.md  TEAM_TESTING_CHECKLIST.md  bun.lockb  bunfig.toml  components.json  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/.cargo/: config.toml
frontend/public/: llms-full.txt  llms.txt  robots.txt  sitemap.xml
frontend/public/.well-known/: apple-app-site-association  assetlinks.json
frontend/public/locales/: en.json  es.json  fr.json  pt.json
frontend/src/: app.tsx  chat.css  index.css  main.tsx  routeTree.gen.ts  vite-env.d.ts
frontend/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  apple-sign-in-info.md  build.rs  tauri.conf.json  tauri.windows.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: default.json  mobile-android.json  mobile-ios.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/patches/pdf-extract-0.12.0/: Cargo.toml  Cargo.toml.orig  MAPLE_PATCHES.md
frontend/src-tauri/patches/pdf-extract-0.12.0/src/: lib.rs
frontend/src-tauri/patches/tao-0.35.2/src/platform_impl/android/: ndk_glue.rs
frontend/src-tauri/resources/windows/: .gitignore  README.md  install-dlls.nsh
frontend/src-tauri/scripts/: build-ios-onnxruntime-all.sh  build-ios-onnxruntime.sh  canonicalize-static-archive.py  onnxruntime-android-pins.sh  onnxruntime-pins.sh  provide-android-onnxruntime.sh  provide-linux-onnxruntime.sh  provide-macos-onnxruntime.sh  provide-windows-onnxruntime.sh  run-with-desktop-onnxruntime.sh  setup-ios-cargo-config.sh  setup-ios-onnxruntime.sh  stage-windows-runtime-dlls.ps1
frontend/src-tauri/src/: agent.rs  lib.rs  maple_api.rs  onnxruntime.rs  pdf_extractor.rs  pdf_ocr.rs  proxy.rs  tts.rs
frontend/src-tauri/src/agent/: developer_tools.rs  provider.rs  shell_permission.rs  web_permission.rs  web_tools.rs
frontend/src/ai/: OpenAIContext.tsx  OpenAIContextDef.ts  toolExecutors.ts  tools.ts  useOpenAi.ts
frontend/src/billing/: applePayService.ts  billingAccess.test.ts  billingAccess.ts  billingApi.ts  billingPortal.ts  billingService.ts
frontend/src/components/: AccountDialog.tsx  AccountMenu.tsx  AddToProjectDialog.tsx  AgentMode.test.ts  AgentMode.tsx  AlertDestructive.tsx  AppEntryPage.tsx  AppleAuthProvider.tsx  ApplePayButton.tsx  AssistantChat.tsx  AuthHeader.tsx  AuthMain.tsx  AuthenticatedHomeContent.tsx  BillingDebugger.tsx  BillingServiceProvider.tsx  BillingStatus.tsx  BulkDeleteDialog.tsx  ChangePasswordDialog.tsx  ChatBox.tsx  ChatContextMenu.tsx  ChatHistoryList.tsx  ComparisonChart.tsx  ConditionalInfoCard.tsx  ContextLimitDialog.tsx  ConversationProjectDialog.tsx  ConversationProjectPicker.tsx  CreditUsage.tsx  DeepLinkHandler.tsx  DeleteAccountDialog.tsx  DeleteChatDialog.tsx  DeleteConversationProjectDialog.tsx  DocumentPlatformDialog.tsx  ErrorFallback.tsx  Explainer.tsx  ExternalLink.tsx  ExternalUrlConfirmDialog.tsx  Footer.tsx  (+46 more)
native/: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  justfile  rmp.toml
native/desktop/iced/: Cargo.toml
native/desktop/iced/src/: main.rs  theme.rs
native/ios/: Info-macOS.plist  Info.plist  project.yml
native/rust/: Cargo.toml  uniffi.toml
native/rust/src/: lib.rs
native/scripts/: bundle-gtk-linux.sh
plugins/store/: Cargo.toml  build.rs
plugins/store/ios/: Package.swift
plugins/store/ios/Sources/: StorePlugin.swift
plugins/store/permissions/autogenerated/: reference.md
plugins/store/permissions/autogenerated/commands/: get_region.toml  get_transactions.toml  verify_purchase.toml
plugins/store/permissions/schemas/: schema.json
plugins/store/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
scripts/: setup-windows.ps1  tauri-windows.ps1
scripts/ci/: _common.sh  android-pr.sh  android-release.sh  attestation-manifest.sh  canonical-ios-app-hash.py  canonical-windows-nsis-payload-hash.py  desktop-pr.sh  desktop-release.sh  desktop-windows-pr.sh  desktop-windows-release.sh  frontend.sh  install-windows-artifact-signing.ps1  install-windows-minisign.ps1  ios-onnxruntime.sh  ios-pr.sh  ios-release.sh  latest-json.sh  release-verification-guide.sh  rust.sh  signed-release-rehearsal.sh  test-canonical-macho.py  validate-release-version.sh  validate-release-workflow-parity.sh  verify-release-artifacts.sh  web.sh  windows-artifact-sign.ps1
tests/: .env.example  bun.lockb  package.json
tests/browseruse/: README.md  base_test.py  login_helpers.py  requirements-ci.txt  test_dashboard.py  test_runner.py  test_signin_simple.py
tests/tests/: existing-user.spec.ts  signup.spec.ts
(+259 files in other folders)
