[package]
name = "maple"
version = "2.0.17"
description = "Maple AI"
authors = ["tony@opensecret.cloud"]
license = "MIT"
repository = "https://github.com/OpenSecretCloud/Maple"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2.7.1"
tauri-plugin-updater = "2.9.0"
tauri-plugin = "2.1.1"
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-sign-in-with-apple = "1.0.2"
tokio = { version = "1.0", features = ["net", "sync", "rt-multi-thread", "macros", "time"] }
once_cell = "1.18.0"
maple-proxy = "0.1.7"
tauri-plugin-fs = "2.4.4"
anyhow = "1.0"
axum = "0.8"
pdf-extract = "0.7"
base64 = "0.22"

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
# TTS dependencies (Supertonic) - desktop only
ort = "2.0.0-rc.10"
ndarray = { version = "0.16", features = ["rayon"] }
rand = "0.8"
rand_distr = "0.4"
hound = "3.5"
unicode-normalization = "0.1"
regex = "1.10"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "5.0"
sha2 = "0.10"

[target.'cfg(target_os = "ios")'.dependencies]
# TTS dependencies (Supertonic) - iOS
# We build ONNX Runtime 1.22.2 from source for iOS (see scripts/build-ios-onnxruntime.sh)
# We disable download-binaries and copy-dylibs since we link our own xcframework
# Need "std" for Error trait impl and file operations, "ndarray" for tensor creation
ort = { version = "2.0.0-rc.10", default-features = false, features = ["std", "ndarray"] }
ndarray = { version = "0.16" }
rand = "0.8"
rand_distr = "0.4"
hound = "3.5"
unicode-normalization = "0.1"
regex = "1.10"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "5.0"
sha2 = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", default-features = false, features = ["vendored"] }
