[package]
name = "maple_core"
version = "3.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
base64 = "0.22"
chrono = "0.4"
flume = "0.11"
futures = "0.3"
uniffi = "0.31.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_cbor = "0.11"
serde_json = "1"
opensecret = "3.0.0-alpha.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "time"] }
uuid = { version = "1.11", features = ["v4"] }
