[package]
name = "maple_desktop_iced"
version = "3.0.0"
edition = "2021"
publish = false

[dependencies]
maple_core = { path = "../../rust" }
iced = { version = "0.14", features = ["tokio", "canvas"] }
flume = "0.11"
dirs-next = "2"
dotenvy = "0.15"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
